frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend
spec:
  selector:
    app: frontend
    type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
