redis-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    app: redis
spec:
  clusterIP: None
  ports:
  - port: 6379
  selector:
    app: redis
